fix graphql problem